# mytown

./: .env  .gitignore  Dockerfile  README.md  cypress.config.js  docker-compose.yml  manage.py  package-lock.json  package.json  pyproject.toml  run.sh
.data/db/: postmaster.pid
.data/db/global/: 1260  pg_control  pg_internal.init
.data/db/pg_stat_tmp/: db_0.stat  db_13757.stat  global.stat
_keys/: bangladesh_bank.private.pem  bangladesh_bank.pub.pem  desco.private.pem  desco.pub.pem  lged.private.pem  lged.pub.pem  titas.private.pem  titas.pub.pem  wasa.private.pem  wasa.pub.pem
cypress/e2e/: feedback-admin.cy.js  feedback-submit.cy.js
feedbacks/: admin.py  admin_views.py  filters.py  forms.py  models.py  serializers.py  views.py
feedbacks/migrations/: 0001_initial.py  0002_alter_category_options_alter_feedback_title.py  0002_alter_feedback_id.py  0002_remove_feedback_created_by.py  0003_alter_feedback_assigned_to.py  0003_feedback_categories.py  0004_category.py  0004_remove_feedback_categories_feedback_category.py  0005_feedback_organisation.py
feedbacks/templatetags/: deslugify.py
mytown/: asgi.py  settings.py  urls.py  wsgi.py
orgs/: admin.py  models.py  views.py
orgs/migrations/: 0001_initial.py  0002_organisation_public_key.py
static/js/: admin.js  app.js  keychain.js
templates/: base.html
templates/account/: login.html  logout.html
templates/bulma/: admin-base.html  base.html
templates/feedbacks/: feedback_create.html  feedback_enquiry.html  feedback_enquiry_result.html  feedback_update.html  feedback_view.html
(+124 files in other folders)
