[tool.poetry]
name = "mytown"
version = "0.1.0"
description = ""
authors = ["Aniruddha Adhikary <aniruddha@adhikary.net>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.6"
django-fsm = "^2.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
